Fixed header positioning and z-index.

--- a/assets/css/bonus.css
+++ b/assets/css/bonus.css
@@ -1,3 +1,12 @@
+/** {
+	z-index: 1;
+}*/
+
+* {
+	position: relative;
+	z-index: 1;
+}
+
 .bonus-section,
 .contact-section,
 .about-section {
